# Autonomous_robot

./: CMakeLists.txt  package.xml
launch/: robot_navigation.launch
src/: imu_node.py  lidar_processor.py  robot_navigator.py
