<?xml version="1.0"?>
<package format="2">
  <name>autonomous_robot</name>
  <version>0.0.1</version>
  <description>Autonomous robot navigation package using YDLidar G2 and MPU6050</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  
</package>